# simplify_truths

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build.yaml  deploy.yml
derive/: Cargo.toml
derive/src/: lib.rs
http/: common.js  http-client.env.json  index.http  simplify.http  table.http
spec/: main.tsp  models.tsp  options.tsp  package-lock.json  package.json  response.tsp  tspconfig.yaml
spec/tsp-output/@typespec/openapi3/: openapi.v2.yaml  openapi.yaml
src/: config.rs  language.rs  main.rs
src/expressions/: expression.rs  helpers.rs  iterator.rs  mod.rs  operator.rs  simplify.rs  truth_table.rs
src/parsing/: expression_parser.rs  mod.rs  utils.rs
src/resources/static/: not-found.html  openapi.html
src/routing/: error.rs  index.rs  mod.rs  options.rs  response.rs  simplify.rs  table.rs
src/routing/routes/: index.rs  mod.rs  simplify.rs  table.rs  util.rs
src/utils/: array.rs  axum.rs  mod.rs  serialize.rs
