[package]
name = "simplify_truths"
version = "2.0.0"
edition = "2021"
authors = ["Martin Berg Alstad"]

[dependencies]
# Parsing
nom = "7.1.3"
# Async
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
# Serialization / Deserialization
serde = { version = "1.0.203", features = ["derive"] }
# API
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
