[package]
name = "simplify_truths"
version = "2.0.0"
edition = "2021"
authors = ["Martin Berg Alstad"]

[dependencies]
# Parsing
nom = "7.1.3"
# Async
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
# Serialization / Deserialization
serde = { version = "1.0.203", features = ["derive", "rc"] }
# API
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "normalize-path", "tower"] }
tower = "0.4.13"
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

lib = { git = "https://github.com/emberal/rust-lib.git", tag = "1.0.0", features = ["axum", "vec", "nom", "serde", "derive"] }
